Augmentation coverage ApplicationStageService